--- a/OpenEdXMobile/res/drawable/ic_arrow_up.xml
+++ b/OpenEdXMobile/res/drawable/ic_arrow_up.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="12"
     android:viewportHeight="8">
     <path
-        android:fillColor="@color/neutralDark"
+        android:fillColor="@color/primaryBaseColor"
         android:pathData="M6,0L0,6L1.41,7.41L6,2.83L10.59,7.41L12,6L6,0Z" />
 </vector>
