--- a/OpenEdXMobile/res/drawable/ic_tip_up.xml
+++ b/OpenEdXMobile/res/drawable/ic_tip_up.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="20"
     android:viewportHeight="20">
     <path
-        android:fillColor="#454545"
+        android:fillColor="@color/neutralXXDark"
         android:pathData="M5.833,11.667L10,7.5L14.167,11.667H5.833Z" />
 </vector>
