--- a/OpenEdXMobile/res/values/colors.xml
+++ b/OpenEdXMobile/res/values/colors.xml
@@ -119,8 +119,8 @@
     <color name="toolbar_controls_color">@color/primaryBaseColor</color>
 
     <!-- Social platform colors -->
-    <color name="fb_bg">#1877F2</color>
-    <color name="microsoft_bg">#2F2F2F</color>
+    <color name="facebook_button_background">#1877F2</color>
+    <color name="microsoft_button_background">#2F2F2F</color>
 
 
 
